--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       rel="icon"
       type="image/png"
       sizes="32x32"
-      href="./images/favicon-32x32.png"
+      href="./favicon-32x32.png"
     />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -23,18 +23,18 @@
     <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
 
     <link rel="stylesheet" href="style.css" />
-    
   </head>
   <body>
     <div class="qr">
       <div class="qr-upper">
-         <img class = "qr-image" src="./images/image-qr-code.png" alt="">
-      
+        <img class="qr-image" src="./image-qr-code.png" alt="" />
       </div>
       <div class="qr-lower">
-        <h2>Improve your front-end skills by building projects </h2>
-          <p> Scan the QR code to
-        visit Frontend Mentor and take your coding skills to the next level</p>
+        <h2>Improve your front-end skills by building projects</h2>
+        <p>
+          Scan the QR code to visit Frontend Mentor and take your coding skills
+          to the next level
+        </p>
 
         <div class="attribution">
           Challenge by
